--- a/views/pages/statusMany.ejs
+++ b/views/pages/statusMany.ejs
@@ -47,16 +47,17 @@ function returnColor(item)
 
 
 
-
-    <br>
-<div class="container pt-5">
+<div>
+    <a href = "/"><i class="fa fa-arrow-left ml-3 mt-3 " style="font-size:20px; color: #0091da;"></i></a>
+</div>
+<div class="container pt-4">
     
     <div class="row  text-center">
         <div class="card col-sm-12 shadow-lg p-3 mb-5 bg-white rounded">
             <div class="card-body text-center">
                 <div class = "table-responsive">
                     <table class="table table-hover table-striped">
-                        <thead class="thead-dark">
+                        <thead style="background-color: #0091da; color: white;">
                         <tr>
                             <th scope="col">Application Id</th>
                             <th scope="col">Name</th>
