--- a/views/pages/statusMany.ejs
+++ b/views/pages/statusMany.ejs
@@ -2,8 +2,8 @@
 <%- include ../partials/nav -%>
 <%
 
-console.log(listPeople)
-/*var listPeople = [];
+//console.log(listPeople)
+var listPeople = [];
 
 var TempName = ["Kasper Gallegos","Anisa Oconnor","Anika Shah","Anisa Oconnor","Cynthia Wallis","Safah Marsh","Pablo Greene","Kirby Gentry"];
 var TempResponse = ["Verified","Manual","Error"];
@@ -23,7 +23,7 @@ for(var i=0; i < TempName.length;i++)
     };
     listPeople.push(VerificationList)
 }
-*/
+
 
 const details = {name:"Jonn Doe",appId:"#10321702020",state:"Ohio"};
 
