--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -16,6 +16,15 @@
       document.getElementById("aa").style.display = "block";
     }
   }
+
+  function hideMail(x) {
+    if(x.checked) {
+      document.getElementById("mail").style.display = "block";
+    }
+    else{
+      document.getElementById("mail").style.display = "none";
+    }
+  }
 </script>
 
 <%- include ../partials/header -%>
@@ -49,9 +58,11 @@
             <br>
             <input class="form-control" type="file" style="height:60%;" name="upload_file" />
             <br>
-            <input type="text" name = "subject" class = "form-control" placeholder="Enter Mail Subject...."><br>
-            <input id="check_mail_hidden" type = "hidden" value="0" name="wantMail">
-            <input id="check_mail" type = "checkbox" value="1" name="wantMail"> Send me an email with the output. <br>
+            <div id="mail" style="display: none">
+              <input type="text" name = "subject" class = "form-control" placeholder="Enter Mail Subject...."><br>
+              <input id="check_mail_hidden" type = "hidden" value="0" name="wantMail">
+            </div>
+            <input id="check_mail" type = "checkbox" onchange="hideMail(this)" value="1" name="wantMail"> Send me an email with the output. <br>
             <script>
               if(document.getElementById("check_mail").checked) {
                 document.getElementById('check_mail_hidden').disabled = true;
